[package]
edition = "2018"
name = "tarball"
version = "0.1.1"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
exclude = ["_darcs/*"]
publish = false
description = "A simple utility to easily archive directories"
categories = ["command-line-utilities"]
license = "BSD-3-Clause-Clear"
repository = "https://nest.pijul.com/dragonmaus/tarball"

[dependencies]
bzip2 = { git = "https://github.com/alexcrichton/bzip2-rs", version = "0.4" }
getopt = "0.4"
filetime = "0.2"
flate2 = "1"
ignore = "0.4"
tar = "0.4"
xz2 = "0.1"
