[package]
edition = "2018"
name = "tarball"
version = "0.3.1"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
publish = false
description = "A simple utility to easily archive directories"
categories = ["command-line-utilities"]
license = "BSD-3-Clause-Clear"
repository = "https://git.dragonma.us/dragonmaus/tarball.rs"

[dependencies]
bzip2 = { git = "https://github.com/alexcrichton/bzip2-rs", version = "0.4" }
filetime = "0.2"
flate2 = "1"
getopt = "0.4"
ignore = "0.4"
lz4 = "1.23"
tar = "0.4"
xz2 = "0.1"
zstd = "0.5"
