[package]
name = "tarball"
version = "1.0.5"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2021"
description = "A simple utility to easily archive directories"
repository = "https://git.dragonma.us/rust/tarball"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = true

[dependencies]
bzip2 = "0.4"
filetime = "0.2"
flate2 = "1"
getopt = "1"
ignore = "0.4"
lz4 = "1"
tar = "0.4"
xz2 = "0.1"
zstd = "0.9"
